--- a/src/app/main/gestionFeedback/add-survey/add-survey.component.html
+++ b/src/app/main/gestionFeedback/add-survey/add-survey.component.html
@@ -8,10 +8,10 @@
             <thead class="thead-light">
                 <tr>
                     <th>Question</th>
-                    <th>A</th>
-                    <th>B</th>
-                    <th>C</th>
-                    <th>D</th>
+                    <th>tres Bien</th>
+                    <th>Bien</th>
+                    <th>mauvais</th>
+                    <th>tres mauvais</th>
                 </tr>
             </thead>
             <tbody>
