--- a/src/app/main/gestionFeedback/feed-backs/feed-backs.component.html
+++ b/src/app/main/gestionFeedback/feed-backs/feed-backs.component.html
@@ -48,7 +48,7 @@
           <!-- Invoice List Table -->
           <ngx-datatable
           [rows]="rows"
-          [rowHeight]="50"
+          [rowHeight]="100"
           class="bootstrap core-bootstrap"
           [limit]="selectedOption"
           [columnMode]="ColumnMode.force"
@@ -68,7 +68,7 @@
           </ngx-datatable-column>
           <ngx-datatable-column name="Description" prop="description">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{ row.description }}
+              <div class="description-cell">{{ row.description }}</div>
             </ng-template>
           </ngx-datatable-column>
           <ngx-datatable-column name="Evaluation" prop="evaluation" [width]="100">
@@ -85,45 +85,48 @@
               {{ row.Role}}
             </ng-template>
           </ngx-datatable-column>
-      <!-- ngx-datatable-column for Actions -->
-      <!-- ngx-datatable-column for Actions -->
+          
+
 <ngx-datatable-column name="Actions" [width]="100" [sortable]="false">
     <ng-template let-row="row" ngx-datatable-cell-template>
       <div class="d-flex align-items-center">
-        <!-- <button class="btn btn-sm btn-sm" (click)="toggleSurvey(row)">Survey</button> -->
         <button class="btn btn-sm btn-danger" (click)="deleteFeedback(row)">Delete</button>
       </div>
-      <div *ngIf="row.showSurvey">
-        <!-- Display survey table here -->
-        <table class="table table-bordered mt-2">
-          <thead>
-            <tr>
-              <th>Survey ID</th>
-              <th>Survey Title</th>
-              <th>Start Date</th>
-              <th>End Date</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let survey of row.surveys">
-              <td>{{ survey.idsurvey }}</td>
-              <td>{{ survey.title }}</td>
-              <td>{{ survey.startDate | date }}</td>
-              <td>{{ survey.endDate | date }}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+     
     </ng-template>
   </ngx-datatable-column>
+  </ngx-datatable>
   
-  
-          
-        </ngx-datatable>
+ <!-- Session Average Table -->
+<ngx-datatable
+
+[rows]="sessionavgfeedbacks"
+[rowHeight]="50"
+class="bootstrap core-bootstrap"
+[limit]="selectedOption"
+[columnMode]="ColumnMode.force"
+[headerHeight]="50"
+[footerHeight]="50"
+[scrollbarH]="true"
+>
+<ngx-datatable-column name="Session ID" prop="sessionid" [width]="150">
+  <ng-template let-row="row" ngx-datatable-cell-template>
+    {{ row.sessionid }}
+  </ng-template>
+</ngx-datatable-column>
+<ngx-datatable-column name="Average Feedback %" prop="moyennesession" [width]="150">
+  <ng-template let-row="row" ngx-datatable-cell-template>
+    {{ row.moyennesession }}
+  </ng-template>
+</ngx-datatable-column>
+</ngx-datatable>
+
           <!--/ Invoice List Table -->
         </div>
       </section>
       <!--/ Invoice List -->
     </div>
+    
   </div>
+
   
